--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="main-content">
+    <header class="section sec1 header active">
+    </header>
+    <main>
+        <section class="section sec2 about">
+        <section class="section sec3 portfolio">
+        <section class="section sec4 blogs">
+        <section class="section sec5 contact">
+        </section>
+    </main>
     
 </body>
 </html>
