--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <header class="section sec1 header active">
     </header>
     <main>
-        <section class="section sec2 about">
-        <section class="section sec3 portfolio">
-        <section class="section sec4 blogs">
-        <section class="section sec5 contact">
+        <section class="section sec2 about"></section>
+        <section class="section sec3 portfolio"></section>
+        <section class="section sec4 blogs"></section>
+        <section class="section sec5 contact"></section>
     </main>
     <div class="controls">
         <div class="control control-1 active-btn ">
