--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section class="section sec5 contact"></section>
     </main>
     <div class="controls">
-        <div class="control control-1 active-btn ">
+        <div class="control control-1 active-btn " data-id="home">
             <i class="fas fa-home"></i>
         </div>
         <div class="control control-2 " data-id="about">
@@ -38,5 +38,6 @@
         </div>
     </div>
     
+    <script src="Assets/js/app.js"></script>
 </body>
 </html>
