--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="control control-4 " data-id="blogs">
             <i class="fas fa-blog"></i>
         </div>
-        <div class="control control-5 " data-id="contacts">
+        <div class="control control-5 " data-id="contact">
             <i class="fas fa-address-card"></i>
         </div>
     </div>
