--- a/index.html
+++ b/index.html
@@ -13,6 +13,32 @@
 </head>
 <body class="main-content">
     <header class="section sec1 header active" id="home">
+        <div class="header-content">
+            <div class="left-header">
+                <div class="header-shape">
+                    <div class="image">
+                        <img src="Assets/img/me2.jpg" alt="">
+
+                    </div>
+                </div>
+            </div>
+            <div class="right-header">
+                <h1 class="name">
+                    Hello, I'm <span>Richie Orito.</span>
+                    A FullStack Developer
+                </h1>
+                <p>
+                    I'm a FullStack Developer who loves developing both client and server software.
+                    Main speciality is working with Front-End technolgies to bring visuality in a
+                    simple way, communicate and interact with the users without making them break
+                    even a single sweat.
+                </p>
+                <a href="" class="main-btn">
+                    <span class="btn-text">Download Cv</span>
+                    <span class="btn-icon"><i class="fas fa-download"></i></span>
+                </a>
+            </div>
+        </div>
 
     </header>
     <main>
