Adds a container for the button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
                 <div class="header-shape">
                     <div class="image">
                         <img src="Assets/img/me2.jpg" alt="">
-
                     </div>
                 </div>
             </div>
@@ -28,15 +27,17 @@
                     A FullStack Developer
                 </h1>
                 <p>
-                    I'm a FullStack Developer who loves developing both client and server software.
+                    I'm a FullStack Developer who loves developing both client-side and server-side software.
                     Main speciality is working with Front-End technolgies to bring visuality in a
-                    simple way, communicate and interact with the users without making them break
+                    simple way, to communicate and interact with users without making them break
                     even a single sweat.
                 </p>
-                <a href="" class="main-btn">
-                    <span class="btn-text">Download Cv</span>
-                    <span class="btn-icon"><i class="fas fa-download"></i></span>
-                </a>
+                <div class="btn-container">
+                    <a href="" class="main-btn">
+                        <span class="btn-text">Download Cv</span>
+                        <span class="btn-icon"><i class="fas fa-download"></i></span>
+                    </a>
+                </div>
             </div>
         </div>
 
