--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hello, I'm <span>Richie Orito.</span>
+                    Hello, I'm <span>Richie Orito</span>.
                     A FullStack Developer
                 </h1>
                 <p>
@@ -43,7 +43,11 @@
 
     </header>
     <main>
-        <section class="section sec2 about" id="about"></section>
+        <section class="section sec2 about" id="about">
+            <div class="main-title">
+                <h2>About <span>me</span> <span class="bg-text">my stats</span></h2>
+            </div>
+        </section>
         <section class="section sec3 portfolio" id="portfolio"></section>
         <section class="section sec4 blogs" id="blogs"></section>
         <section class="section sec5 contact" id="contact"></section>
