--- a/index.html
+++ b/index.html
@@ -47,6 +47,50 @@
             <div class="main-title">
                 <h2>About <span>me</span> <span class="bg-text">my stats</span></h2>
             </div>
+            <div class="about-containter">
+                <div class="left-about">
+                    <!-- <h4>My Story</h4> -->
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident dolores deleniti
+                        consequatur tenetur excepturi enim laudantium veritatis explicabo voluptate cum
+                        quos fuga soluta libero pariatur iure ullam, magnam cupiditate animi! <br> <br> 
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia libero, 
+                        esse sapiente minima quibusdam excepturi id?
+                    </p>
+                    <div class="btn-container">
+                        <a href="" class="main-btn">
+                            <span class="btn-text">Download Cv</span>
+                            <span class="btn-icon"><i class="fas fa-download"></i></span>
+                        </a>
+                    </div>
+                </div>
+                <div class="right-about">
+                    <div class="about-item">
+                        <div class="about-text">
+                            <p class="large-text">20+</p>
+                            <p class="small-text">Projects <br> Completed</p>
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="about-text">
+                            <p class="large-text">1+</p>
+                            <p class="small-text">years of <br> experience</p>
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="about-text">
+                            <p class="large-text">50+</p>
+                            <p class="small-text">created <br> repositories</p>
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="about-text">
+                            <p class="large-text">1,500+</p>
+                            <p class="small-text">contributions <br> in the last year</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="section sec3 portfolio" id="portfolio"></section>
         <section class="section sec4 blogs" id="blogs"></section>
