--- a/index.html
+++ b/index.html
@@ -91,6 +91,20 @@
                     </div>
                 </div>
             </div>
+            <div class="about-stats">My Skills</h4>
+                <h4 class="stat-title">
+                    <div class="progress-bars">
+                        <div class="progress-bar">
+                            <p class="progress-title">HTML5</p>
+                            <div class="progress-container">
+                                <p class="progress text">90%</p>
+                                <div class="progress">
+                                    <span class="html"></span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            </div>
         </section>
         <section class="section sec3 portfolio" id="portfolio"></section>
         <section class="section sec4 blogs" id="blogs"></section>
