--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                     </div>
                 </div>
             </div>
-            <div class="about-stats">My Skills</h4>
-                <h4 class="stat-title">
+            <div class="about-stats">
+                <h4 class="stat-title">My Skills</h4>
                     <div class="progress-bars">
                         <div class="progress-bar">
                             <p class="progress-title">HTML5</p>
