Update various skills in the progress bar

--- a/index.html
+++ b/index.html
@@ -97,9 +97,99 @@
                         <div class="progress-bar">
                             <p class="progress-title">HTML5</p>
                             <div class="progress-container">
-                                <p class="progress text">90%</p>
+                                <p class="progress-text">80%</p>
                                 <div class="progress">
                                     <span class="html"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="progress-bar">
+                            <p class="progress-title">CSS3/SCSS</p>
+                            <div class="progress-container">
+                                <p class="progress-text">73%</p>
+                                <div class="progress">
+                                    <span class="css"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="progress-bar">
+                            <p class="progress-title">Figma</p>
+                            <div class="progress-container">
+                                <p class="progress-text">73%</p>
+                                <div class="progress">
+                                    <span class="figma"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="progress-bar">
+                            <p class="progress-title">JavaScript</p>
+                            <div class="progress-container">
+                                <p class="progress-text">60%</p>
+                                <div class="progress">
+                                    <span class="javascript"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="progress-bar">
+                            <p class="progress-title">NodeJS</p>
+                            <div class="progress-container">
+                                <p class="progress-text">50%</p>
+                                <div class="progress">
+                                    <span class="nodejs"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="progress-bar">
+                            <p class="progress-title">AngularJS</p>
+                            <div class="progress-container">
+                                <p class="progress-text">51%</p>
+                                <div class="progress">
+                                    <span class="angular"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="progress-bar">
+                            <p class="progress-title">ReactJS</p>
+                            <div class="progress-container">
+                                <p class="progress-text">57%</p>
+                                <div class="progress">
+                                    <span class="react"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="progress-bar">
+                            <p class="progress-title">Git</p>
+                            <div class="progress-container">
+                                <p class="progress-text">70%</p>
+                                <div class="progress">
+                                    <span class="git"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="progress-bar">
+                            <p class="progress-title">Django</p>
+                            <div class="progress-container">
+                                <p class="progress-text">58%</p>
+                                <div class="progress">
+                                    <span class="django"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="progress-bar">
+                            <p class="progress-title">Flask</p>
+                            <div class="progress-container">
+                                <p class="progress-text">52%</p>
+                                <div class="progress">
+                                    <span class="flask"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="progress-bar">
+                            <p class="progress-title">PostgreSQL</p>
+                            <div class="progress-container">
+                                <p class="progress-text">72%</p>
+                                <div class="progress">
+                                    <span class="postgresql"></span>
                                 </div>
                             </div>
                         </div>
