Cretaed my Timeline

--- a/index.html
+++ b/index.html
@@ -195,6 +195,32 @@
                         </div>
                     </div>
             </div>
+            <h4 class="stat-title">My Timeline</h4>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="timeline-duration">
+                        1st September 2020 - 1st September 2021
+                    </p>
+                    <h5>Full Stack Developer <span>- Warm Investments</span> </h5>
+                    <p>
+                        Reporting to the Managing Director, I performed front- and back-end operations on websites and computer systems to ensure they
+                        collaborated well with their design elements.
+                    </p>
+                    <p>
+                        Assisted in process improvement initiatives within the
+                        team; worked closely with the software deployment and 
+                        operations teams to ensure successful transition and 
+                        implementations.
+                    </p>
+                    <p>
+                        Collaborated with external business partners and software 
+                        platform vendors on technical design and architecture
+                    </p>
+                </div>
+            </div>
         </section>
         <section class="section sec3 portfolio" id="portfolio"></section>
         <section class="section sec4 blogs" id="blogs"></section>
