Added more timelines during my career

--- a/index.html
+++ b/index.html
@@ -202,22 +202,100 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="timeline-duration">
+                        20th September 2021 - 13th May 2022
+                    </p>
+                    <h5>Software Developer<span>- Moringa School</span> </h5>
+                    <p>&#x2022;
+                       Graduated at Moringa School in which I advanced my skills in both
+                       front-end and back-end technologies. The institution is a  fast paced
+                       learning environment.
+                    </p>
+                    <p>&#x2022;
+                        Build 20 plus projects with each project showing my improvement in 
+                        writing code , maintaining it and writing tests having a well designed
+                        UI and UX.
+                    </p>
+                    <p>&#x2022;
+                        My final project I had to collaborate in a group in which I was
+                        assigned the role of developing the front-end part of the project
+                        and was granted with having a professional apperance from my
+                        technical mentors.
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="timeline-duration">
                         1st September 2020 - 1st September 2021
                     </p>
                     <h5>Full Stack Developer <span>- Warm Investments</span> </h5>
-                    <p>
+                    <p>&#x2022;
                         Reporting to the Managing Director, I performed front- and back-end operations on websites and computer systems to ensure they
                         collaborated well with their design elements.
                     </p>
-                    <p>
+                    <p>&#x2022;
                         Assisted in process improvement initiatives within the
                         team; worked closely with the software deployment and 
                         operations teams to ensure successful transition and 
                         implementations.
                     </p>
-                    <p>
+                    <p>&#x2022;
                         Collaborated with external business partners and software 
                         platform vendors on technical design and architecture
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="timeline-duration">
+                        September 2018 - Ongoing.
+                    </p>
+                    <h5>Bachelor of Science in Information Technology<span>- Jomo Kenyatta 
+                        University of Agriculture and Technology</span> </h5>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="timeline-duration">
+                        August 2021 - October 2021.
+                    </p>
+                    <h5>Digital Badge in JavaScript<span>- IBM</span> </h5>
+                    <p>&#x2022;
+                        Through self-paced learning, I displayed an understanding of topics such as JavaScript fundamentals,
+                        JavaScript Syntax, types of variables and operators, arrays, conditional statements, functions,
+                        and for and while loops.
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="timeline-duration">
+                        January2020 - 1st March 2021
+                    </p>
+                    <h5>Cisco Certified Network Associate (CCNA)<span>- Jomo Kenyatta 
+                        University of Agriculture and Technology</span></h5>
+                    <p>
+                        introductory knowledge of cybersecurity, including the global implications of cyber threats, the
+                        impact of cyber attacks on industries, and why cybersecurity is a growing profession. I have an 
+                        understanding of the ways in which networks are vulnerable to attack and Cisco's approach
+                        to threat detection and defense.
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="timeline-duration">
+                        January 2020 - March 2020.
+                    </p>
+                    <h5>Digital Badge in Web Development<span>- IBM</span> </h5>
+                    <p>&#x2022;
+                        Through self-paced learning, I displayed an understanding of topics such as types of web application, the technologies used,
+                        and the web application tools.
                     </p>
                 </div>
             </div>
