Creates the portfolio section

--- a/index.html
+++ b/index.html
@@ -300,7 +300,100 @@
                 </div>
             </div>
         </section>
-        <section class="section sec3 portfolio" id="portfolio"></section>
+        <section class="section sec3 portfolio" id="portfolio">
+            <div class="main-title">
+                <h2>My<span>Portfolio</span> <span class="bg-text">my Work</span></h2>
+            </div>
+            <p class="portfolio-text">
+                My Personal Projects that i've been working on.
+            </p>
+            <div class="portfolios">
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="Assets/img/Home Page.png" alt="">
+                    </div>
+                    <div class="hover-item">
+                        <h3>Project Source </h3>
+                        <p> A Poverty Awarness Web Application</p>
+                        <div class="icons">
+                            <a href="https://github.com/RichieOrito/HandsOnPoverty" target="_blank" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="Assets/img/Gallery Image.png" alt="">
+                    </div>
+                    <div class="hover-item">
+                        <h3>Project Source </h3>
+                        <p> A Cultural Photography Website</p>
+                        <div class="icons">
+                            <a href="https://github.com/RichieOrito/photo-blog" target="_blank" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="Assets/img/125.jpg" alt="">
+                    </div>
+                    <div class="hover-item">
+                        <h3>Project Source </h3>
+                        <p> Instagram Clone Using Django</p>
+                        <div class="icons">
+                            <a href="https://github.com/RichieOrito/HandsOnPoverty" target="_blank" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="Assets/img/github.png" alt="">
+                    </div>
+                    <div class="hover-item">
+                        <h3>Project Source </h3>
+                        <p> GitHub Clone Using Agular.JS with the GitHub API</p>
+                        <div class="icons">
+                            <a href="https://github.com/RichieOrito/My-Github" target="_blank" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="Assets/img/4900_9_03.jpg" alt="">
+                    </div>
+                    <div class="hover-item">
+                        <h3>Project Source</h3>
+                        <p> A Pizza Order Website</p>
+                        <div class="icons">
+                            <a href="https://github.com/RichieOrito/pizza-innit" target="_blank" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="Assets/img/8558.jpg" alt="">
+                    </div>
+                    <div class="hover-item">
+                        <h3>Project Source </h3>
+                        <p> Great Quote Application Built with Angular.JS</p>
+                        <div class="icons">
+                            <a href="https://richieorito.github.io/great-quote/" target="_blank" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="section sec4 blogs" id="blogs"></section>
         <section class="section sec5 contact" id="contact"></section>
     </main>
