Updates the github portfolio

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                     </div>
                     <div class="hover-item">
                         <h3>Project Source </h3>
-                        <p> GitHub Clone Using Agular.JS with the GitHub API</p>
+                        <p> GitHub Searh Using Agular.JS with the GitHub API</p>
                         <div class="icons">
                             <a href="https://github.com/RichieOrito/My-Github" target="_blank" class="icon">
                                 <i class="fab fa-github"></i>
