--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                 </div>
             </div>
         </section>
-        <section class="section sec3 portfolio" id="portfolio">
+        <section class="section sec3" id="portfolio">
             <div class="main-title">
                 <h2>My<span>Portfolio</span> <span class="bg-text">my Work</span></h2>
             </div>
@@ -394,7 +394,87 @@
                 </div>
             </div>
         </section>
-        <section class="section sec4 blogs" id="blogs"></section>
+        <section class="section sec4" id="blogs">
+            <div class="blogs-content">
+                    <div class="main-title">
+                        <h2>My <span>Blogs</span> <span class="bg-text">My Blogs</span></h2>
+                    </div>
+                    <div class="blogs">
+                        <div class="blog">
+                            <img src="Assets/img/3426526.jpg" alt="">
+                            <div class="blog-text">
+                                <h4>
+                                    Where to start with programming
+                                </h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sit doloremque inventore obcaecati ullam accusantium.
+                                </p>
+                            </div>
+
+                        </div>
+                        <div class="blog">
+                            <img src="Assets/img/3426526.jpg" alt="">
+                            <div class="blog-text">
+                                <h4>
+                                    Where to start with programming
+                                </h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sit doloremque inventore obcaecati ullam accusantium.
+                                </p>
+                            </div>
+
+                        </div>
+                        <div class="blog">
+                            <img src="Assets/img/3426526.jpg" alt="">
+                            <div class="blog-text">
+                                <h4>
+                                    Where to start with programming
+                                </h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sit doloremque inventore obcaecati ullam accusantium.
+                                </p>
+                            </div>
+
+                        </div>
+                        <div class="blog">
+                            <img src="Assets/img/3426526.jpg" alt="">
+                            <div class="blog-text">
+                                <h4>
+                                    Where to start with programming
+                                </h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sit doloremque inventore obcaecati ullam accusantium.
+                                </p>
+                            </div>
+
+                        </div>
+                        <div class="blog">
+                            <img src="Assets/img/3426526.jpg" alt="">
+                            <div class="blog-text">
+                                <h4>
+                                    Where to start with programming
+                                </h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sit doloremque inventore obcaecati ullam accusantium.
+                                </p>
+                            </div>
+
+                        </div>
+                        <div class="blog">
+                            <img src="Assets/img/3426526.jpg" alt="">
+                            <div class="blog-text">
+                                <h4>
+                                    Where to start with programming
+                                </h4>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sit doloremque inventore obcaecati ullam accusantium.
+                                </p>
+                            </div>
+
+                        </div>
+                    </div>
+            </div>
+        </section>
         <section class="section sec5 contact" id="contact"></section>
     </main>
     <div class="controls">
