--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500&display=swap" rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="main-content">
@@ -45,7 +46,7 @@
     <main>
         <section class="section sec2 about" id="about">
             <div class="main-title">
-                <h2>About <span>me</span> <span class="bg-text">my stats</span></h2>
+                <h2>About <span>me</span> <span class="bg-text"> stats</span></h2>
             </div>
             <div class="about-containter">
                 <div class="left-about">
@@ -302,7 +303,7 @@
         </section>
         <section class="section sec3" id="portfolio">
             <div class="main-title">
-                <h2>My<span>Portfolio</span> <span class="bg-text">my Work</span></h2>
+                <h2>My <span>Portfolio</span> <span class="bg-text">my Work</span></h2>
             </div>
             <p class="portfolio-text">
                 My Personal Projects that i've been working on.
@@ -475,7 +476,73 @@
                     </div>
             </div>
         </section>
-        <section class="section sec5 contact" id="contact"></section>
+        <section class="section sec5 contact" id="contact">
+            <div class="main-title">
+                <h2>Contact <span>me</span> <span class="bg-text"> Contacts</span></h2>
+            </div>
+            <div class="container-con">
+                <div class="container">
+                    <div class="contactInfo">
+                        <h2>Contact Infomation</h2>
+                        <ul class="info">
+                            <li>
+                                <span><i class='bx bx-current-location'></i></span>
+                                <span>Nairobi, Kenya</span>
+                            </li>
+                            <li>
+                                <span><i class='bx bxl-gmail' ></i></span>
+                                <span>oritorichie2@gmail.com</span>
+                            </li>
+                            <li>
+                                <span><i class='bx bxs-phone-call' ></i></span>
+                                <span>+254 711 600 131</span>
+                            </li>
+                            <li>
+                                <span><i class='bx bx-home'></i></span>
+                                <span>P.O box 00100-68882 <br>
+                                        Nairobi, Kenya <br>
+                                        Street G.P.O
+                                </span>
+                            </li>
+                        </ul>
+                        <ul class="socials">
+                                <li><a href="https://www.linkedin.com/in/richie-orito/" target="_blank"><i class='bx bxl-linkedin-square'></i></a></li>
+                                <li><a href="https://www.instagram.com/riisherd.otto/" target="_blank"><i class='bx bxl-instagram' ></i></a></li>
+                                <li><a href="https://twitter.com/HostWarm" target="_blank"><i class='bx bxl-twitter' ></i></a></li>
+                                <li><a href="https://github.com/RichieOrito" target="_blank"><i class='bx bxl-github' ></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="contactForm">
+                        <h2>Send a Message</h2>
+                        <div class="formBox">
+                            <div class="inputBox w50">
+                                <input type="text" required>
+                                <span>First Name</span>
+                            </div>
+                            <div class="inputBox w50">
+                                <input type="text" required>
+                                <span>Last Name</span>
+                            </div>
+                            <div class="inputBox w50">
+                                <input type="text" required>
+                                <span>Email Adress</span>
+                            </div>
+                            <div class="inputBox w50">
+                                <input type="text" required>
+                                <span>Mobile Number</span>
+                            </div>
+                            <div class="inputBox w100">
+                                <textarea required></textarea>
+                                <span>Write your message here..</span>
+                            </div>
+                            <div class="inputBox w100">
+                                <input type="submit" value="Send">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <div class="controls">
         <div class="control control-1 active-btn " data-id="home">
