--- a/index.html
+++ b/index.html
@@ -561,6 +561,9 @@
             <i class="fas fa-address-card"></i>
         </div>
     </div>
+    <div class="theme-btn">
+        <i class="fas fa-adjust"></i>
+    </div>
     
     
     <script src="Assets/js/app.js"></script>
