the header-shape closing div was misplaced

--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
     <header class="section sec1 header active" id="home">
         <div class="header-content">
             <div class="left-header">
-                <div class="header-shape">
+                <div class="header-shape"></div>
                     <div class="image">
                         <img src="Assets/img/me2.jpg" alt="">
                     </div>
-                </div>
             </div>
             <div class="right-header">
                 <h1 class="name">
