Updated the blogs

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                 <h2>My <span>Portfolio</span> <span class="bg-text">my Work</span></h2>
             </div>
             <p class="portfolio-text">
-                My Personal Projects that i've been working on.
+                A few of my Projects and some that am still working on.
             </p>
             <div class="portfolios">
                 <div class="portfolio-item">
@@ -407,16 +407,45 @@
                                     Where to start with programming
                                 </h4>
                                 <p>
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sit doloremque inventore obcaecati ullam accusantium.
+                                   It all starts in the mind. Venturing into programming is ot a matter of resources but your as an individual.
+                                   If you start in the mind then you are halfway there . Its a journey of a thousand miles with thousands
+                                   people on the journey , people who can also be resources
                                 </p>
                             </div>
 
                         </div>
                         <div class="blog">
-                            <img src="Assets/img/3426526.jpg" alt="">
+                            <img src="Assets/img/shubham-dhage-T9rKvI3N0NM-unsplash.jpg" alt="">
                             <div class="blog-text">
                                 <h4>
-                                    Where to start with programming
+                                    Is blockchain where we should all be focusing on
+                                </h4>
+                                <p>
+                                    Blockchain is a system of recording information in a way that makes it difficult or impossible to change,
+                                    hack, or cheat the system. A blockchain is essentially a digital ledger of transactions that is duplicated
+                                    and distributed across the entire network of computer systems on the blockchain.
+                                </p>
+                            </div>
+
+                        </div>
+                        <div class="blog">
+                            <img src="Assets/img/lautaro-andreani-xkBaqlcqeb4-unsplash.jpg" alt="">
+                            <div class="blog-text">
+                                <h4>
+                                   Its all about React
+                                </h4>
+                                <p>
+                                    React is a free and open-source front-end JavaScript library for building user interfaces based on UI components
+                                    It is maintained by Meta and a community of individual developers and companies.
+                                </p>
+                            </div>
+
+                        </div>
+                        <div class="blog">
+                            <img src="Assets/img/ben-griffiths-Bj6ENZDMSDY-unsplash.jpg" alt="">
+                            <div class="blog-text">
+                                <h4>
+                                    What you should know about PHP
                                 </h4>
                                 <p>
                                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sit doloremque inventore obcaecati ullam accusantium.
@@ -425,10 +454,10 @@
 
                         </div>
                         <div class="blog">
-                            <img src="Assets/img/3426526.jpg" alt="">
+                            <img src="Assets/img/3099563.jpg" alt="">
                             <div class="blog-text">
                                 <h4>
-                                    Where to start with programming
+                                   The current Framework am currently builing things with
                                 </h4>
                                 <p>
                                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sit doloremque inventore obcaecati ullam accusantium.
@@ -437,34 +466,10 @@
 
                         </div>
                         <div class="blog">
-                            <img src="Assets/img/3426526.jpg" alt="">
+                            <img src="Assets/img/20943761.jpg" alt="">
                             <div class="blog-text">
                                 <h4>
-                                    Where to start with programming
-                                </h4>
-                                <p>
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sit doloremque inventore obcaecati ullam accusantium.
-                                </p>
-                            </div>
-
-                        </div>
-                        <div class="blog">
-                            <img src="Assets/img/3426526.jpg" alt="">
-                            <div class="blog-text">
-                                <h4>
-                                    Where to start with programming
-                                </h4>
-                                <p>
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sit doloremque inventore obcaecati ullam accusantium.
-                                </p>
-                            </div>
-
-                        </div>
-                        <div class="blog">
-                            <img src="Assets/img/3426526.jpg" alt="">
-                            <div class="blog-text">
-                                <h4>
-                                    Where to start with programming
+                                    Automating the daily boring things with Javascript
                                 </h4>
                                 <p>
                                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sit doloremque inventore obcaecati ullam accusantium.
