uodated blogs images

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 
                         </div>
                         <div class="blog">
-                            <img src="Assets/img/shubham-dhage-T9rKvI3N0NM-unsplash.jpg" alt="">
+                            <img src="Assets/img/26824.jpg" alt="">
                             <div class="blog-text">
                                 <h4>
                                     Is blockchain where we should all be focusing on
@@ -429,7 +429,7 @@
 
                         </div>
                         <div class="blog">
-                            <img src="Assets/img/lautaro-andreani-xkBaqlcqeb4-unsplash.jpg" alt="">
+                            <img src="Assets/img/4857949.jpg" alt="">
                             <div class="blog-text">
                                 <h4>
                                    Its all about React
@@ -442,7 +442,7 @@
 
                         </div>
                         <div class="blog">
-                            <img src="Assets/img/ben-griffiths-Bj6ENZDMSDY-unsplash.jpg" alt="">
+                            <img src="Assets/img/2778468.jpg" alt="">
                             <div class="blog-text">
                                 <h4>
                                     What you should know about PHP
