added a div for contact information

--- a/index.html
+++ b/index.html
@@ -487,28 +487,30 @@
             <div class="container-con">
                 <div class="container">
                     <div class="contactInfo">
-                        <h2>Contact Infomation</h2>
-                        <ul class="info">
-                            <li>
-                                <span><i class='bx bx-current-location'></i></span>
-                                <span>Nairobi, Kenya</span>
-                            </li>
-                            <li>
-                                <span><i class='bx bxl-gmail' ></i></span>
-                                <span>oritorichie2@gmail.com</span>
-                            </li>
-                            <li>
-                                <span><i class='bx bxs-phone-call' ></i></span>
-                                <span>+254 711 600 131</span>
-                            </li>
-                            <li>
-                                <span><i class='bx bx-home'></i></span>
-                                <span>P.O box 00100-68882 <br>
-                                        Nairobi, Kenya <br>
-                                        Street G.P.O
-                                </span>
-                            </li>
-                        </ul>
+                        <div>
+                            <h2>My Contacts</h2>
+                            <ul class="info">
+                                <li>
+                                    <span><i class='bx bx-current-location'></i></span>
+                                    <span>Nairobi, Kenya</span>
+                                </li>
+                                <li>
+                                    <span><i class='bx bxl-gmail' ></i></span>
+                                    <span>oritorichie2@gmail.com</span>
+                                </li>
+                                <li>
+                                    <span><i class='bx bxs-phone-call' ></i></span>
+                                    <span>+254 711 600 131</span>
+                                </li>
+                                <li>
+                                    <span><i class='bx bx-home'></i></span>
+                                    <span>P.O box 00100-68882 <br>
+                                            Nairobi, Kenya <br>
+                                            Street G.P.O
+                                    </span>
+                                </li>
+                            </ul>
+                        </div>
                         <ul class="socials">
                                 <li><a href="https://www.linkedin.com/in/richie-orito/" target="_blank"><i class='bx bxl-linkedin-square'></i></a></li>
                                 <li><a href="https://www.instagram.com/riisherd.otto/" target="_blank"><i class='bx bxl-instagram' ></i></a></li>
